--- a/Proyecto/Frontend/Tango App/package.json
+++ b/Proyecto/Frontend/Tango App/package.json
@@ -19,11 +19,13 @@
     "react-native-neat-date-picker": "^1.4.12",
     "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.1.3"
   },
   "author": "",
