--- a/Proyecto/Frontend/Tango App/package.json
+++ b/Proyecto/Frontend/Tango App/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-neat-date-picker": "^1.4.12",
+    "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
