--- a/Proyecto/Frontend/Tango App/package.json
+++ b/Proyecto/Frontend/Tango App/package.json
@@ -10,9 +10,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
+    "axios": "^1.6.8",
     "expo": "~50.0.8",
+    "expo-build-properties": "^0.11.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
